--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,29 @@
         tools:context=".MainActivity">
 
     <TextView
-            android:id="@+id/textview_sound_recorder_heading"
+            android:id="@+id/textview_sound_monitor_heading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sound Recorder"
+            android:text="Sound Monitor"
             android:layout_centerHorizontal="true"
             android:textSize="32dp"
             android:textStyle="bold"
             android:textColor="#000"
             android:layout_marginTop="32dp"
     />
+
+    <TextView
+            android:id="@+id/textview_sound_level"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="000"
+            android:layout_centerHorizontal="true"
+            android:textSize="32dp"
+            android:textStyle="bold"
+            android:textColor="#000"
+            android:layout_marginTop="100dp"
+            android:layout_alignParentTop="true" android:layout_above="@+id/button_pause_recording"
+            android:layout_marginBottom="100dp"/>
 
     <Button
             android:id="@+id/button_start_recording"
@@ -28,10 +41,10 @@
             android:layout_centerVertical="true"/>
 
     <Button
-            android:id="@+id/button_pause_recording"
+            android:id="@+id/button_monitor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Pause"
+            android:text="Monitor"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="32dp"/>
